# gba-agent-toolkit

./: .gitignore  CLAUDE.md  LICENSE  README.md
.github/workflows/: ci.yml
agent/: README.md  play-loop.mjs  playthrough.mjs  playthrough.test.mjs  trial-and-error.mjs
agent/lib/: mcp-client.mjs  ollama-client.mjs  progress.mjs  progress.test.mjs  recovery.mjs  recovery.test.mjs  state.mjs  state.test.mjs
agent/policies/: demo-policy.mjs  llm-policy.mjs  llm-policy.test.mjs
agent/state-maps/: example.json
docs/: 01_gba-emulator-api-todo.html  INDEX.md  ROADMAP.md  SECURITY.md  agent-integration.md  api-reference.md  env-verification.md  phase0-setup.md  phase2-launcher.md  state-reading.md
launcher/: README.md  package-lock.json  package.json  start-session.sh  stop-session.sh
launcher/src-tauri/: Cargo.toml  tauri.conf.json
launcher/src-tauri/capabilities/: default.json
launcher/src-tauri/icons/: icon.icns
launcher/src-tauri/src/: main.rs
launcher/ui/: index.html  main.js
mcp-server/: README.md
mcp-server/mgba-bridge/: LICENSE.mcp-mgba  README.md  bridge.lua  json.lua
mcp-server/pyboy/: README.md  mcp_server.py  pyboy_bridge.py  requirements.txt  test_pyboy_api.py
scripts/: check-mgba.sh  scan-memory.mjs  test-connection.sh  verify-phase1.mjs  verify-phase10-gba.mjs  verify-phase10.sh
